syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.github.saturn_xiv.palm.plugins.fig.v1";
package palm.fig.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

import "nut.proto";
import "auth.proto";

// ----------------------------------------------------------------------------
service Notification {
  rpc Index(palm.nut.v1.Pager) returns (IndexNotificationResponse) {}
}

message IndexNotificationResponse {
  message Item {
    oneof message {
      EmailTask email = 1;
      SmsTask sms = 2;
    }
    google.protobuf.Timestamp created_at = 19;
  }
  repeated Item items = 1;
  palm.nut.v1.Pagination pagination = 9;
}

// ----------------------------------------------------------------------------

service LeaveWord {
  rpc Create(palm.nut.v1.MediaContent) returns (google.protobuf.Empty) {}
  rpc Index(palm.nut.v1.Pager) returns (LeaveWordIndexResponse) {}
  rpc Show(palm.nut.v1.IdRequest) returns (LeaveWordIndexResponse.Item) {}
  rpc Destroy(palm.nut.v1.IdRequest) returns (google.protobuf.Empty) {}
}

message LeaveWordIndexResponse {
  message Item {
    int32 id = 1;
    string lang = 2;
    string ip = 3;
    palm.nut.v1.MediaContent content = 8;
    google.protobuf.Timestamp updated_at = 11;
    google.protobuf.Timestamp created_at = 12;
  }
  repeated Item items = 1;
  palm.nut.v1.Pagination pagination = 9;
}

// ----------------------------------------------------------------------------

service Site {
  rpc SetMaintenanceMode(SiteMaintenanceModeRequest)
      returns (google.protobuf.Empty) {}

  rpc Install(SiteInstallRequest) returns (google.protobuf.Empty) {}

  rpc ClearCache(google.protobuf.Empty) returns (google.protobuf.Empty) {}

  rpc Layout(google.protobuf.Empty) returns (SiteLayoutResponse) {}
  rpc SetAuthor(SiteLayoutResponse.Author) returns (google.protobuf.Empty) {}
  rpc SetCopyright(SiteSetCopyrightRequest) returns (google.protobuf.Empty) {}
  rpc SetKeywords(SiteSetKeywordsRequest) returns (google.protobuf.Empty) {}
  rpc SetInfo(SiteSetInfoRequest) returns (google.protobuf.Empty) {}
  rpc SetLogo(SiteSetLogoRequest) returns (google.protobuf.Empty) {}

  rpc SetTwilio(TwilioProfile) returns (google.protobuf.Empty) {}
  rpc GetTwilio(google.protobuf.Empty) returns (TwilioProfile) {}
  rpc PingTwilio(SiteTwilioPingRequest) returns (google.protobuf.Empty) {}

  rpc SetSmtp(SmtpProfile) returns (google.protobuf.Empty) {}
  rpc GetSmtp(google.protobuf.Empty) returns (SmtpProfile) {}
  rpc PingSmtp(SiteSmtpPingRequest) returns (google.protobuf.Empty) {}

  rpc SetIndexNow(IndexNowProfile) returns (google.protobuf.Empty) {}
  rpc GetIndexNow(google.protobuf.Empty) returns (IndexNowProfile) {}
  rpc PingIndexNow(IndexNowPingRequest) returns (google.protobuf.Empty) {}

  rpc SetGoogle(GoogleProfile) returns (google.protobuf.Empty) {}
  rpc GetGoogle(google.protobuf.Empty) returns (GoogleProfile) {}
  rpc PingGoogle(SitemapPingRequest) returns (google.protobuf.Empty) {}

  rpc SetBaidu(BaiduProfile) returns (google.protobuf.Empty) {}
  rpc GetBaidu(google.protobuf.Empty) returns (BaiduProfile) {}
  rpc PingBaidu(SitemapPingRequest) returns (google.protobuf.Empty) {}

  rpc Status(google.protobuf.Empty) returns (SiteStatusResponse) {}
}

message IndexNowProfile {
  string key = 1;
}

message IndexNowPingRequest {
  string key = 1;
  string home = 9;
}

message SitemapPingRequest {
  string home = 1;
}

message SiteMaintenanceModeRequest {
  google.protobuf.Duration ttl = 1;
  string reason = 2;
}

message SiteInstallRequest {
  palm.auth.v1.UserSignUpRequest user = 1;
}

message TwilioProfile {
  string from = 1;
  string account_sid = 2;
  string auth_token = 3;
  optional string sms_status_callback = 9;
}

message SmtpProfile {
  // https://github.com/karastojko/mailio/blob/master/include/mailio/smtp.hpp#L229
  enum AuthMethod {
    None = 0;
    Login = 1;
    StartTls = 2;
  }
  string host = 1;
  uint32 port = 2;
  AuthMethod auth_method = 3;
  repeated EmailTask.Address cc = 8;
  repeated EmailTask.Address bcc = 9;

  EmailTask.Address from = 11;
  string password = 12;
}

message EmailTask {
  message Address {
    string name = 1;
    string email = 2;
  }
  message Body {
    string text = 1;
    bool html = 2;
  }
  message Attachment {
    string name = 1;
    bytes payload = 2;
  }

  Address to = 1;
  repeated Address cc = 2;
  repeated Address bcc = 3;
  string subject = 11;
  Body body = 12;
  repeated Attachment attachments = 13;
}

message SiteTwilioPingRequest {
  string to = 1;
  string message = 2;
  TwilioProfile profile = 9;
}

message SiteSmtpPingRequest {
  EmailTask.Address to = 1;
  string subject = 2;
  string content = 3;
  SmtpProfile profile = 9;
}

message SiteSetLogoRequest {
  string url = 1;
}
message SiteSetCopyrightRequest {
  string payload = 1;
}
message SiteSetKeywordsRequest {
  repeated string items = 1;
}
message SiteSetInfoRequest {
  string lang = 1;
  string title = 11;
  string subhead = 12;
  string description = 13;
}

message SiteLayoutResponse {
  message Author {
    string name = 1;
    string email = 2;
  }
  string title = 1;
  string subhead = 2;
  repeated string keywords = 3;
  string description = 4;
  Author author = 5;
  string copyright = 6;
  string logo = 7;
  repeated string languages = 9;
}

message GoogleProfile {
  // https://developers.google.com/recaptcha/intro
  message ReCaptcha {
    string site_key = 1;
    string secret = 2;
  }
  optional string site_verify_id = 1;
  optional ReCaptcha re_captcha = 2;
}
message BaiduProfile {
  message SiteVerify {
    string id = 1;
    string content = 2;
  }
  optional SiteVerify site_verify = 1;
}

message SmsTask {
  string from = 1;
  repeated string to = 2;
  string body = 3;
}

message SiteStatusResponse {
  message Database {
    string name = 1;
    string size = 2;
  }
  message PostgreSql {
    string version = 1;
    google.protobuf.Timestamp now = 2;
    repeated Database databases = 9;
  }
  message MySql {
    uint64 size = 1;
    string version = 2;
  }
  message Redis {
    message Item {
      string node = 1;
      string key = 2;
      int64 ttl = 3;
    };
    string info = 1;
    repeated Item items = 2;
  }
  message RabbitMq {
    string protocol = 1;
    uint32 heartbeat = 2;
  }
  message OpenSearch {
    string url = 1;
    string info = 2;
  }
  message Health {
    string name = 1;
    string status = 2;
  }
  message System {
    string version = 1;
    string cpu = 2;
    string memory = 3;
    string boot = 4;
    string disk = 5;
    string load = 6;
    string fs = 7;
    string swap = 8;
    string uptime = 9;
    string network = 10;
  }

  PostgreSql postgresql = 1;
  MySql mysql = 2;
  Redis redis = 3;
  RabbitMq rabbitmq = 4;
  OpenSearch opensearch = 5;
  System system = 11;
  repeated Health healthes = 21;
}

// ----------------------------------------------------------------------------

service ShorterLink {
  rpc Create(ShorterLinkCreateRequest) returns (google.protobuf.Empty) {}
  rpc Update(ShorterLinkUpdateRequest) returns (google.protobuf.Empty) {}
  rpc Destroy(palm.nut.v1.IdRequest) returns (google.protobuf.Empty) {}
  rpc Index(palm.nut.v1.Pager) returns (ShorterLinkIndexResponse) {}
}

message ShorterLinkIndexResponse {
  message Item {
    int32 id = 1;
    string url = 2;
    string details = 3;
    string code = 9;

    google.protobuf.Timestamp updated_at = 11;
  }
  palm.nut.v1.Pagination pagination = 1;
  repeated Item items = 11;
}

message ShorterLinkCreateRequest {
  string url = 1;
  string details = 2;
}

message ShorterLinkUpdateRequest {
  int32 id = 1;
  string url = 2;
  string details = 3;
}
// ----------------------------------------------------------------------------

service Tag {
  rpc Create(TagCreateRequest) returns (google.protobuf.Empty) {}
  rpc Update(TagUpdateRequest) returns (google.protobuf.Empty) {}
  rpc Destroy(palm.nut.v1.IdRequest) returns (google.protobuf.Empty) {}
  rpc Index(google.protobuf.Empty) returns (TagIndexResponse) {}
}

message TagIndexResponse {
  message Item {
    int32 id = 1;
    string code = 2;
    int32 priority = 3;
    google.protobuf.Timestamp updated_at = 11;
  }
  repeated Item items = 1;
}

message TagCreateRequest {
  string code = 1;
  int32 priority = 11;
}

message TagUpdateRequest {
  int32 id = 1;
  string code = 2;
  int32 priority = 11;
}
// ----------------------------------------------------------------------------

service Category {
  rpc Create(CategoryCreateRequest) returns (google.protobuf.Empty) {}
  rpc Update(CategoryUpdateRequest) returns (google.protobuf.Empty) {}
  rpc Destroy(palm.nut.v1.IdRequest) returns (google.protobuf.Empty) {}
  rpc Index(google.protobuf.Empty) returns (CategoryIndexResponse) {}
}
message CategoryIndexResponse {
  message Item {
    int32 id = 1;
    string code = 2;
    int32 left = 3;
    int32 right = 4;

    google.protobuf.Timestamp updated_at = 11;
  }
  repeated Item items = 1;
}
message CategoryCreateRequest {
  string code = 1;
  oneof by {
    int32 left = 2;
    int32 parent = 3;
  }
}

message CategoryUpdateRequest {
  int32 id = 1;
  string code = 2;
}

// ----------------------------------------------------------------------------
